--- a/Reno.MVC/Views/Shared/_Navigation.cshtml
+++ b/Reno.MVC/Views/Shared/_Navigation.cshtml
@@ -85,12 +85,8 @@
             </li>
 
             <li>
-                <a asp-action="Index" asp-controller="Report"><i class="fa  fa-2x  fa-file-text"></i> <span class="nav-label">Reports</span> <span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a asp-action="Index" asp-controller="Report">Demographics Reports</a></li>
-                    <li><a asp-action="ExtractOnMedicationData" asp-controller="MedicationReport">Extract MS Patients On Medications</a></li>
-
-                </ul>
+                <a asp-action="GetReportsList" asp-controller="Reports"><i class="fa  fa-2x  fa-file-text"></i> <span class="nav-label">Reports</span> <span class="fa arrow"></span></a>
+                
             </li>
 
             <li>
